--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Update
 
 on:
   schedule:
-    - cron: '45 21 * * *'
+    - cron: '45 21 * * *'  # 每天 21:45 (Asia/Shanghai)
   workflow_dispatch:
     branches:
       - main
@@ -13,15 +13,15 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4  # 更新到最新版本
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5  # 更新到最新版本
       with:
         python-version: '3.10'
 
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v4  # 更新到最新版本
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
